@@ -6,8 +6,9 @@ youker-assistant (0.2.1-0ubuntu1) saucy; urgency=low
   * Fixed the bug about software status and add masklayer.
   * Rewrite the code of system information.
   * Add some signals and slots.
+  * Fixed the bug about Software signals(LP: #1226389).
 
- -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Mon, 16 Sep 2013 12:57:02 +0800
+ -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Tue, 17 Sep 2013 12:54:29 +0800
 
 youker-assistant (0.2.0-0ubuntu1) saucy; urgency=low
 
